[gd_scene load_steps=14 format=3 uid="uid://u7xbuwuumsj4"]

[ext_resource type="Script" path="res://ray.gd" id="1_ql3u8"]
[ext_resource type="Shader" path="res://color.gdshader" id="2_m8cmi"]
[ext_resource type="Texture2D" uid="uid://dgema56iclmpe" path="res://img/scaled/ray.png" id="3_iurc2"]
[ext_resource type="FontFile" uid="uid://ccspj8bt13hlf" path="res://font/OpenDyslexic-Regular.otf" id="3_nj6ar"]
[ext_resource type="Material" uid="uid://cxmkikkvtr6qk" path="res://ally_material.tres" id="4_7kpnp"]
[ext_resource type="Texture2D" uid="uid://dnkrq3li27yjg" path="res://img/ray_popup.png" id="4_mj3jh"]
[ext_resource type="Texture2D" uid="uid://c2lq7l0y6uwry" path="res://img/speech_popup.PNG" id="6_wvnt4"]
[ext_resource type="AudioStream" uid="uid://crqtpkq7t1xcw" path="res://sound/ray_attack.wav" id="7_ajj33"]
[ext_resource type="Texture2D" uid="uid://ce2korcuqg1wc" path="res://img/ally_popup.png" id="7_vtev5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8b6p4"]
shader = ExtResource("2_m8cmi")
shader_parameter/new_color = Vector3(0, 0, 0.9)
shader_parameter/active = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8vcko"]
size = Vector2(131, 29.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k41ry"]
size = Vector2(160, 49.5)

[sub_resource type="LabelSettings" id="LabelSettings_3ay2t"]
line_spacing = 0.0
font_size = 18

[node name="Ray" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 0
collision_mask = 0
platform_on_leave = 2
platform_floor_layers = 0
script = ExtResource("1_ql3u8")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_8b6p4")
texture = ExtResource("3_iurc2")

[node name="Outline" type="Node2D" parent="Sprite2D"]
unique_name_in_owner = true
show_behind_parent = true

[node name="Up" type="Sprite2D" parent="Sprite2D/Outline"]
show_behind_parent = true
material = ExtResource("4_7kpnp")
position = Vector2(2, 0)
texture = ExtResource("3_iurc2")

[node name="Up2" type="Sprite2D" parent="Sprite2D/Outline"]
show_behind_parent = true
material = ExtResource("4_7kpnp")
position = Vector2(0, 2)
texture = ExtResource("3_iurc2")

[node name="Up3" type="Sprite2D" parent="Sprite2D/Outline"]
show_behind_parent = true
material = ExtResource("4_7kpnp")
position = Vector2(-2, 0)
texture = ExtResource("3_iurc2")

[node name="Up4" type="Sprite2D" parent="Sprite2D/Outline"]
show_behind_parent = true
material = ExtResource("4_7kpnp")
position = Vector2(0, -2)
texture = ExtResource("3_iurc2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_8vcko")

[node name="StunTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="Help" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -108.5
offset_top = -110.5
offset_right = 180.5
offset_bottom = -21.5
scale = Vector2(0.799999, 0.799999)
color = Color(0.266667, 0.266667, 0.266667, 0.537255)

[node name="HelpLabel" type="Label" parent="Help"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nj6ar")
text = "Here, I'll paralyse those mutants!
[Cost: 2 Chumks]"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, 0.25)
shape = SubResource("RectangleShape2D_k41ry")

[node name="OldPopup" type="Sprite2D" parent="."]
visible = false
position = Vector2(-137.372, -77.8933)
scale = Vector2(0.636992, 0.636992)
texture = ExtResource("4_mj3jh")

[node name="Popup" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
offset_left = -258.0
offset_top = -130.0
offset_right = -8.0
offset_bottom = -30.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("7_vtev5")
region_rect = Rect2(5, 3, 206, 104)

[node name="Label" type="Label" parent="Popup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "I'll stun the enemies!
(Costs 10 chumks)
"
label_settings = SubResource("LabelSettings_3ay2t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speech" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-132.372, -41.8933)
scale = Vector2(0.0629278, 0.0629278)
texture = ExtResource("6_wvnt4")

[node name="ShockSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_ajj33")

[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
